--- a/app/styles/partials/layout.scss
+++ b/app/styles/partials/layout.scss
@@ -17,6 +17,7 @@
 html, body
 {
   background: #fff;
+  overflow-x: hidden;
 }
   /* container will have media queries for sizing*/
 
