--- a/app/styles/partials/navbar.scss
+++ b/app/styles/partials/navbar.scss
@@ -273,7 +273,8 @@ button:active {
 
   .navdrawer-container.navbar-is-opened {
     @media only screen and (max-width: $tablet) {
-      width: 45%;
+      width: 83%;
+//      width: 45%;
 
       .search {
         max-width: none;
@@ -318,7 +319,8 @@ button:active {
 @media only screen and (max-width: $desktop) {
   .navdrawer-container {
     position: fixed;
-    width: 30%;
+    width: 42%;
+//    width: 30%;
     z-index: 0;
     opacity: 0;
   }
